[metadata]
name = simpletoolkit
version = 0.1.0
author = ShanFeng
author_email = aoei0713@gmail.com
description = A collection of simple tools for data processing and cloud services
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hi-wenw/simpletoolkit
project_urls =
    Bug Tracker = https://github.com/hi-wenw/simpletoolkit/issues

[options]
packages = find:
python_requires = >=3.8.1
install_requires =
    esdk-obs-python==3.21.4
    pandas==2.0.3
    loguru==0.6.0
    pytest>=7.4.0
    black>=23.12.0
    flake8>=6.1.0